--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup-db": "node -r ./_moduleAliases.cjs src/scripts/setupDatabase.mjs",
+    "insert_list": "node -r ./_moduleAliases.cjs src/scripts/insertListData.mjs",
+    "insert_library": "node -r ./_moduleAliases.cjs src/scripts/insertLibraryData.mjs"
   },
   "dependencies": {
     "autoprefixer": "^10.4.20",
@@ -21,10 +24,18 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "module-alias": "^2.2.3",
+    "mysql2": "^3.12.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5"
-  }
+    "typescript": "^5",
+    "vite": "^6.0.6"
+  },
+  "_moduleAliases": {
+    "@": "./src"
+  },
+  "type": "module"
 }
